<resources>
    <string name="app_name">BIDIK</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_search">Cari Kendaraan</string>
    <string name="menu_data_saya">Data Saya</string>
    <string name="menu_unit_terhapus">Unit Terhapus</string>
    <string name="menu_sync">Perbaharui Data</string>
    <string name="menu_leasing">Daftar Leasing</string>
    <string name="menu_keanggotaan">Keanggotaan</string>

    <string name="home_second">Detail</string>
    <string name="title_activity_main">MainActivity</string>


</resources>
